button color changes

--- a/BookInventoryManagement/Views/Book/Index.cshtml
+++ b/BookInventoryManagement/Views/Book/Index.cshtml
@@ -50,7 +50,7 @@
             <td>
                 <a asp-action="Edit" asp-route-id="@item.bookId" class="btn btn-secondary">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.bookId" class="btn btn-info">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.bookId" class="btn btn-red">Delete</a>
+                <a asp-action="Delete" asp-route-id="@item.bookId" class="btn btn-danger">Delete</a>
             </td>
         </tr>
 }
